k8s/infrastructure/notifications/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      securityContext:
        fsGroup: 3000
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v1.28.0
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yaml
              name: config-volume # generated via configMapGenerator from kustomization file
            - mountPath: /var/cache/ntfy
              name: cache-volume # cache volume mounted to persistent volume
          securityContext:
            runAsUser: 2000
            runAsGroup: 2000
      volumes:
        - name: config-volume
          configMap: # uses configmap generator to parse server.yml to configmap
            name: server-config
        - name: cache-volume
          persistentVolumeClaim: # stores /cache/ntfy in defined pv
            claimName: ntfy-pvc
