k8s/infrastructure/notifications/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort: http
